Adds Web Service Functionality